HW Nov 10th two Qs

--- a/main.tex
+++ b/main.tex
@@ -1688,7 +1688,180 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \end{enumerate}
 
 \end{enumerate}
-\end{enumerate}
+\section{November 10, 2025}
 
+\begin{enumerate}[label=\textbf{Question \arabic*}]
+
+    \item % Question 1
+    H2-01 - T/F question \\
+    A European patent application is filed today, 25 February 2019, in English.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The filing and search fee fall due today, 25 February 2019. Failure can be remedied. \T
+            \item The filing and search fee must be paid today, 25 February 2019. Failure can be remedied. \F --- they must be paid within \textbf{1 month} of filing [\textbf{A. 78(2) EPC}].
+            \item The filing and search fee must be paid at the latest on 25 March 2019. Failure can be remedied. \T --- \textbf{FP} is available (see list of excluded \textbf{FP} stuff under \textbf{R. 135(2) EPC}).
+            \item No time limit for payment of the filing and search fee is set yet; the EPO will send a communication with an invitation to pay within a time limit set in the communication. \F --- under \textbf{R. 38(1) EPC} it clearly says \textbf{1 month}.
+        \end{enumerate}
+        
+        \item \textit{The filing and search fee are not paid in time.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit and the fees may still be paid without additional fee within one month of the communication. \F
+            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. FP can be performed by completing the omitted act, i.e. pay the filing and search fee, within two months from the communication, and payment of the flat FP fee of RFees 2(1).12, last dash. \T --- ``last dash'' refers to \textit{other cases} though...
+            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. RE in respect of the one month time limit for payment of the filing and search fee can be applied if all due care can be proven. \T --- see \textit{\textbf{Lobato}; page 203}.
+            \item In case the filing and search fee are not paid in time, the applicant may of his own motion remedy this failure by payment of the filing and search fee, as well as an additional 50\% of both fees on the next day. \T --- see \textit{\textbf{Visser}} commentary under \textbf{R. 135(1)}.
+        \end{enumerate}
+        
+        \item \textit{The application as filed today comprised 40 pages, but no claims. The applicant will file a set of claims after having received an invitation to do so. Four pages comprising 16 claims in total will be filed with online filing on 14 April 2019. The applicant does not want to pay any penalty fees.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item As the application as filed comprises 40 pages, an additional fee shall be paid for 5 pages (RFees 2(1).1a) and at the latest on 25/3/2019. \F --- it needs to be paid within \textbf{1 month} of filing but it is missing claims and will fail \textbf{R. 57(c) EPC}, so likely EPO will invite under \textbf{R. 58 EPC} and give \textbf{2 months} to pay from the date of invitation.
+            \item An additional fee shall be paid for 9 pages (Fees 2(1).1a) and at the latest on 25/3/2019. \F --- the claims are filed later than this date, so they couldn't have known that. 
+            \item An additional fee shall be paid for 9 pages (Fees 2(1).1a) and at the latest on 14/5/2019.        \F --- it needs to be paid within \textbf{1 month} of filing but it is missing claims and will fail \textbf{R. 57(c) EPC}, so likely EPO will invite under \textbf{R. 58 EPC} and give \textbf{2 months} to pay from the date of invitation.
+            \item Claims fees shall be paid in respect of one claim (RFees 2(1), 15) and at the latest on 14/5/2019 or, without a surcharge, within one month from a communication concerning the failure to meet this time limit.  \T --- \textbf{R. 45(2) EPC}.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 2
+    H2-02 - T/F question (Basic selection) \\
+    On filing, a European patent application comprises thirteen claims. In response to the search opinion, the applicant submits a set of amended claims, whereby the number of claims has become seventeen, and requests examination on the new set of seventeen claims.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Claims fees are to be paid in respect of 2 claims within one month of filing the 17 claims. \F
+        \item Claims fees are to be paid in respect of 2 claims within one month of filing the 17 claims and, if the patent is granted with at most 15 claims, any claims fees paid will be refunded. \F
+        \item No claims fees are to be paid yet. However, claims fees will become payable when the EPO intends to grant the application with the 17 amended claims. \T --- \textbf{R. 71(4) EPC}.
+        \item No claims fees are to be paid yet. If the number of claims is reduced to 15 or less before a R.71(3) communication is issued and not increased anymore afterward, no claims fee need to be paid.           \T \\
+        Relevant section in \textbf{\textit{Lobato}} here is \textsc{page 250}.
+    \end{enumerate}
+
+    \item % Question 3
+    H2-05 - T/F question (Basic selection) \\
+    A European patent application was filed on-line on 18 April 2017 claiming the priority of an earlier British application filed on 14 April 2016. The European patent application comprises only a description, drawings and an abstract, together 33 pages. On 6 May 2017 the EPO received a document with an annex of 3 pages containing eighteen claims.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false, if today is May 2017.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The filing date accorded to the European patent application is 18/4/2017.
+        \item The filing fee of Fees 2(1).1 may be validly paid until 18/5/2017. An additional fee under RFees 2(1).1a must be paid within the same period.
+        \item The filing fee of Fees 2(1).1 may be validly paid until 6/6/2017. Any additional fee under Fees 2(1). 1a must be paid within the same period.
+        \item Failure to pay the filing and search fee will result in the application being deemed not filed.
+        \item Failure to pay the filing and search fee will result in the application being deemed withdrawn.
+        \item Failure to pay the additional fee of Fees 2(1).1a will result in the application being deemed withdrawn.
+        \item Failure to pay the additional fee of Fees 2(1).1a will result in a communication with an invitation to pay the additional fee within one month of the communication.
+        \item Failure to pay the claims fees will result in the application being deemed withdrawn.
+        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication.
+        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication with an additional fee of 50\% of the claims fees.
+        \item Failure to pay the claims fees in response to the communication with the invitation to pay the claims fees may be remedied by payment of the claims fees and an additional 50\% of the claims fees in response of a loss-of-rights communication of the EPO.
+    \end{enumerate}
+    
+    \vspace{1em}
+    The A2 publication was on Wednesday 25 October 2017 and the A3 publication on Wednesday 22 November 2017.
+    
+    \vspace{0.5em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item The examination fee had to be paid at the latest on 22/5/2018.
+        \item The designation fee had to be paid at the latest on 25/4/2018.
+    \end{enumerate}
+    
+    \vspace{1em}
+    Today is early April 2018. The applicant asks you what the effect is if the examination and/or designation fee are not timely paid, and whether further processing would be available.
+    
+    \vspace{0.5em}
+    For each of the statements below, indicate whether the statement is true or false.
+    \begin{enumerate}[label=(\alph*), resume]
+        \item Non-payment of the examination fee will result in the application being deemed withdrawn with further processing available as remedy.
+        \item Non-payment of the designation fee will result in the application being deemed withdrawn with further processing available as remedy.
+    \end{enumerate}
+
+    \item % Question 4
+    H3-07 (Basic selection) \\
+    Which date will be accorded as the filing date if an applicant:
+    \begin{enumerate}[label=(\alph*)]
+        \item sends his European patent application to the EPO by registered mail, date stamped at his local post office at Thursday 8 September 2022 and delivered to the EPO in The Hague on Friday 9 September 2022;
+        \item sends European patent application to the EPO by registered mail, date stamped at his local post office at Saturday 10 September 2022 and delivered to the EPO in The Hague on Monday 12 September 2022;
+        \item submits his European patent application to the EPO by EPO Online Filing 2.0 on Saturday 10 September 2022;
+        \item hands his European patent application to the reception at the EPO in The Hague on Saturday 10 September 2022;
+        \item puts his European patent application in the automated mailbox at the EPO in Berlin on Saturday 10 September 2022;
+    \end{enumerate}
+    where the applicant files a description, claims, drawings and a fully completed Request for Grant form.
+
+    \item % Question 5
+    H3-13 - T/F question (Basic selection) \\
+    A Dutch applicant wishes to file a new European patent application EP2 directly with the EPO in The Hague on 14 March 2023 by reference to the claims, description and drawings of an earlier European patent application EP1 filed on 1 May 2017 with the EPO in The Hague. No filing and search fee were paid for the earlier European patent application EP1.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item This is possible by filing a Request-for-Grant form with all necessary information in the relevant boxes filled in.
+            \item This is not allowed, because the priority period has already expired.
+        \end{enumerate}
+        
+        \item \textit{The box for indicating the file number of the earlier European application in the Request-for-Grant form is left empty.} \\
+        For each of the statements below, indicate whether the statement is true or false.
+        \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
+            \item The filing date accorded to the new European patent application will be 14 March 2023 if the applicant provides the file number within a period of 2 months from an invitation of the EPO to do so.
+            \item The filing date accorded to the new European patent application will be 14 March 2023, but the application will be deemed withdrawn if the applicant fails to provide the file number within a period of 2 months from an invitation of the EPO to do so, but remedies this failure with further processing.
+        \end{enumerate}
+    \end{enumerate}
+
+    \item % Question 6
+    H3-16 - Multiple choice \\
+    On the last day of the priority period, you filed an EP application, claiming priority of an earlier British application. The EP application was identical to the British application. \\
+    The next day, when preparing the filing receipt and a copy of the filed documents to your client, you find out that you accidentally forgot to file the claims. The claims are not literally cited in the description, and are somewhat broadened relative to the specifically disclosed embodiments.
+    
+    \vspace{1em}
+    What can you do to recover the claims in their original wording?
+    
+    \begin{enumerate}[label=\Alph*.]
+        \item File the claims as missing parts, which allows to maintain the filing date because the claims were completely contained in the priority document.
+        \item File the claims in their original form within 2 months from an invitation under Rule 55 EPC.
+        \item File the claims in their original form within 2 months from an invitation under Rule 58 EPC.
+        \item None of A-C.
+    \end{enumerate}
+
+    \item % Question 7
+    H3-22 (Basic selection) \\
+    European patent application EP 1 describes inventions A, B, C and D, but only claims inventions A, B and C. EP1 is still pending. A divisional application DIV1 was timely divided out of EP1, with the same description as EP1, but claiming only invention D. After quite some debate with the Examining Division, DIV1 was refused in oral proceedings last week.
+    
+    \vspace{1em}
+    DIV2 was timely divided out of EP1, describing and claiming inventions B and C. In response to a non-unity objection in the EESR issued in February 2020, DIV2 was limited to only invention B before examination. The applicant just received a communication under Rule 71(3) EPC in respect of DIV2.
+    
+    \vspace{1em}
+    Today is 17 March 2023.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item Until when may another divisional DIV3 be filed out of EP1, directed to C?
+        \item Until when may another divisional DIV4 be filed out of DIV1, directed to C?
+        \item Until when may another divisional DIV5 be filed out of DIV2, directed to C?
+    \end{enumerate}
+
+    \item % Question 8
+    H3-30 - T/F question \\
+    A European patent application EP1 is filed. The filing and search fee are paid in time. The applicant has received an EESR, dated 2 February 2018, indicating that the claims appear to be novel and inventive. The mention of the publication of the search report is published in the EP Bulletin on 23 May 2018. The applicant however is no longer interested in the invention as claimed and therefore decides to let the application lapse by not paying the examination and designation fee. The EPO sends a communication under Rule 112(1) EPC noting a loss of rights, dated 13 Dec 2018. The applicant files a European divisional application DIV1 on 28 December 2018 with the same description as EP1 but with claims defining another invention. The claims of the divisional are supported by the description. The applicant also pays the filing and search fee upon filing the divisional.
+    
+    \vspace{1em}
+    For each of the statements below, indicate whether the statement is true or false.
+    
+    \begin{enumerate}[label=(\alph*)]
+        \item The loss of rights communication indicates that the application is refused.
+        \item The loss of rights ensues at the end of 23 November 2018
+        \item The loss of rights ensues at the end of 3 December 2018.
+        \item The loss of rights ensues at the end of 13 December 2018.
+        \item The loss of rights ensues at the end of 23 December 2018.
+        \item The loss of rights ensues at the end of 24 February 2019.
+        \item As the loss of rights may still be remedied with further processing and the term for requesting further processing has not yet expired, the parent application was still pending when the divisional was filed. No further processing of any kind is needed.
+        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed term for filing the divisional.
+        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed terms for paying the examination and designation fee for the parent application.
+    \end{enumerate}
+
+\end{enumerate}
+\end{enumerate}
 
 \end{document}
