Nov 10th full HW

--- a/main.tex
+++ b/main.tex
@@ -1709,8 +1709,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
             \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit and the fees may still be paid without additional fee within one month of the communication. \F
-            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. FP can be performed by completing the omitted act, i.e. pay the filing and search fee, within two months from the communication, and payment of the flat FP fee of RFees 2(1).12, last dash. \T --- ``last dash'' refers to \textit{other cases} though...
-            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. RE in respect of the one month time limit for payment of the filing and search fee can be applied if all due care can be proven. \T --- see \textit{\textbf{Lobato}; page 203}.
+            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. FP can be performed by completing the omitted act, i.e. pay the filing and search fee, within two months from the communication, and payment of the flat FP fee of RFees 2(1).12, last dash. \F --- ``last dash'' refers to \textit{other cases}, but here we have 50\% of the missed fee; not a flat FP fee.
+            \item In case the filing and search fee are not paid in time, the EPO sends a communication concerning the failure to observe the time limit. RE in respect of the one month time limit for payment of the filing and search fee can be applied if all due care can be proven. \T --- see \textit{\textbf{Lobato}; page 203}. \colorbox{Thistle}{--- \textbf{Ask Zsofia}}
             \item In case the filing and search fee are not paid in time, the applicant may of his own motion remedy this failure by payment of the filing and search fee, as well as an additional 50\% of both fees on the next day. \T --- see \textit{\textbf{Visser}} commentary under \textbf{R. 135(1)}.
         \end{enumerate}
         
@@ -1719,7 +1719,7 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
             \item As the application as filed comprises 40 pages, an additional fee shall be paid for 5 pages (RFees 2(1).1a) and at the latest on 25/3/2019. \F --- it needs to be paid within \textbf{1 month} of filing but it is missing claims and will fail \textbf{R. 57(c) EPC}, so likely EPO will invite under \textbf{R. 58 EPC} and give \textbf{2 months} to pay from the date of invitation.
             \item An additional fee shall be paid for 9 pages (Fees 2(1).1a) and at the latest on 25/3/2019. \F --- the claims are filed later than this date, so they couldn't have known that. 
-            \item An additional fee shall be paid for 9 pages (Fees 2(1).1a) and at the latest on 14/5/2019.        \F --- it needs to be paid within \textbf{1 month} of filing but it is missing claims and will fail \textbf{R. 57(c) EPC}, so likely EPO will invite under \textbf{R. 58 EPC} and give \textbf{2 months} to pay from the date of invitation.
+            \item An additional fee shall be paid for 9 pages (Fees 2(1).1a) and at the latest on 14/5/2019.        \T --- it needs to be paid within \textbf{1 month} of filing or first claim set or reference to another app under \textbf{R. 38(3) EPC}. In this case, it's from the claim set of 14 \textsc{APR} 2019.
             \item Claims fees shall be paid in respect of one claim (RFees 2(1), 15) and at the latest on 14/5/2019 or, without a surcharge, within one month from a communication concerning the failure to meet this time limit.  \T --- \textbf{R. 45(2) EPC}.
         \end{enumerate}
     \end{enumerate}
@@ -1747,17 +1747,17 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false, if today is May 2017.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The filing date accorded to the European patent application is 18/4/2017.
-        \item The filing fee of Fees 2(1).1 may be validly paid until 18/5/2017. An additional fee under RFees 2(1).1a must be paid within the same period.
-        \item The filing fee of Fees 2(1).1 may be validly paid until 6/6/2017. Any additional fee under Fees 2(1). 1a must be paid within the same period.
-        \item Failure to pay the filing and search fee will result in the application being deemed not filed.
-        \item Failure to pay the filing and search fee will result in the application being deemed withdrawn.
-        \item Failure to pay the additional fee of Fees 2(1).1a will result in the application being deemed withdrawn.
-        \item Failure to pay the additional fee of Fees 2(1).1a will result in a communication with an invitation to pay the additional fee within one month of the communication.
-        \item Failure to pay the claims fees will result in the application being deemed withdrawn.
-        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication.
-        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication with an additional fee of 50\% of the claims fees.
-        \item Failure to pay the claims fees in response to the communication with the invitation to pay the claims fees may be remedied by payment of the claims fees and an additional 50\% of the claims fees in response of a loss-of-rights communication of the EPO.
+        \item The filing date accorded to the European patent application is 18/4/2017. \T
+        \item The filing fee of Fees 2(1).1 may be validly paid until 18/5/2017. An additional fee under RFees 2(1).1a must be paid within the same period. \F --- additional fee can be paid \textbf{1m} after that. 
+        \item The filing fee of Fees 2(1).1 may be validly paid until 6/6/2017. Any additional fee under Fees 2(1). 1a must be paid within the same period. \F --- the filing fee must be paid by 18/5/2017.
+        \item Failure to pay the filing and search fee will result in the application being deemed not filed. \F
+        \item Failure to pay the filing and search fee will result in the application being deemed withdrawn. \T
+        \item Failure to pay the additional fee of Fees 2(1).1a will result in the application being deemed withdrawn. \T
+        \item Failure to pay the additional fee of Fees 2(1).1a will result in a communication with an invitation to pay the additional fee within one month of the communication. \F --- no invitation for the additional fee.
+        \item Failure to pay the claims fees will result in the application being deemed withdrawn. \F
+        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication. \T
+        \item Failure to pay the claims fees will result in a communication with an invitation to pay the claims fees within one month of the communication with an additional fee of 50\% of the claims fees. \F
+        \item Failure to pay the claims fees in response to the communication with the invitation to pay the claims fees may be remedied by payment of the claims fees and an additional 50\% of the claims fees in response of a loss-of-rights communication of the EPO. \T
     \end{enumerate}
     
     \vspace{1em}
@@ -1766,8 +1766,8 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \vspace{0.5em}
     For each of the statements below, indicate whether the statement is true or false.
     \begin{enumerate}[label=(\alph*), resume]
-        \item The examination fee had to be paid at the latest on 22/5/2018.
-        \item The designation fee had to be paid at the latest on 25/4/2018.
+        \item The examination fee had to be paid at the latest on 22/5/2018. \T
+        \item The designation fee had to be paid at the latest on 25/4/2018. \F
     \end{enumerate}
     
     \vspace{1em}
@@ -1776,19 +1776,19 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \vspace{0.5em}
     For each of the statements below, indicate whether the statement is true or false.
     \begin{enumerate}[label=(\alph*), resume]
-        \item Non-payment of the examination fee will result in the application being deemed withdrawn with further processing available as remedy.
-        \item Non-payment of the designation fee will result in the application being deemed withdrawn with further processing available as remedy.
+        \item Non-payment of the examination fee will result in the application being deemed withdrawn with further processing available as remedy. \T
+        \item Non-payment of the designation fee will result in the application being deemed withdrawn with further processing available as remedy. \T
     \end{enumerate}
 
     \item % Question 4
     H3-07 (Basic selection) \\
     Which date will be accorded as the filing date if an applicant:
     \begin{enumerate}[label=(\alph*)]
-        \item sends his European patent application to the EPO by registered mail, date stamped at his local post office at Thursday 8 September 2022 and delivered to the EPO in The Hague on Friday 9 September 2022;
-        \item sends European patent application to the EPO by registered mail, date stamped at his local post office at Saturday 10 September 2022 and delivered to the EPO in The Hague on Monday 12 September 2022;
-        \item submits his European patent application to the EPO by EPO Online Filing 2.0 on Saturday 10 September 2022;
-        \item hands his European patent application to the reception at the EPO in The Hague on Saturday 10 September 2022;
-        \item puts his European patent application in the automated mailbox at the EPO in Berlin on Saturday 10 September 2022;
+        \item sends his European patent application to the EPO by registered mail, date stamped at his local post office at Thursday 8 September 2022 and delivered to the EPO in The Hague on Friday 9 September 2022; --- \textbf{9 \textbf{SEP} 2022} --- date of \underline{actual receipt}.
+        \item sends European patent application to the EPO by registered mail, date stamped at his local post office at Saturday 10 September 2022 and delivered to the EPO in The Hague on Monday 12 September 2022; --- \textbf{12 \textbf{SEP} 2022}
+        \item submits his European patent application to the EPO by EPO Online Filing 2.0 on Saturday 10 September 2022; --- \textbf{10 \textbf{SEP} 2022}
+        \item hands his European patent application to the reception at the EPO in The Hague on Saturday 10 September 2022; --- \textbf{10 \textbf{SEP} 2022}
+        \item puts his European patent application in the automated mailbox at the EPO in Berlin on Saturday 10 September 2022; --- \textbf{10 \textbf{SEP} 2022}
     \end{enumerate}
     where the applicant files a description, claims, drawings and a fully completed Request for Grant form.
 
@@ -1799,15 +1799,15 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     \begin{enumerate}[label=(\alph*)]
         \item For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item This is possible by filing a Request-for-Grant form with all necessary information in the relevant boxes filled in.
-            \item This is not allowed, because the priority period has already expired.
+            \item This is possible by filing a Request-for-Grant form with all necessary information in the relevant boxes filled in. \T
+            \item This is not allowed, because the priority period has already expired. \F
         \end{enumerate}
         
         \item \textit{The box for indicating the file number of the earlier European application in the Request-for-Grant form is left empty.} \\
         For each of the statements below, indicate whether the statement is true or false.
         \begin{enumerate}[label={(\alph{enumi}.\arabic*)}]
-            \item The filing date accorded to the new European patent application will be 14 March 2023 if the applicant provides the file number within a period of 2 months from an invitation of the EPO to do so.
-            \item The filing date accorded to the new European patent application will be 14 March 2023, but the application will be deemed withdrawn if the applicant fails to provide the file number within a period of 2 months from an invitation of the EPO to do so, but remedies this failure with further processing.
+            \item The filing date accorded to the new European patent application will be 14 March 2023 if the applicant provides the file number within a period of 2 months from an invitation of the EPO to do so. \F ---  the filing date will change to the date the file number is provided (it is a minimum requirement for the filing date) --- \textbf{R. 40(2) EPC} and \textit{page 179} of \textbf{Lobato}.
+            \item The filing date accorded to the new European patent application will be 14 March 2023, but the application will be deemed withdrawn if the applicant fails to provide the file number within a period of 2 months from an invitation of the EPO to do so, but remedies this failure with further processing. \F -- it won't be withdrawn; it won't even be treated as an \textsc{ep} application.
         \end{enumerate}
     \end{enumerate}
 
@@ -1820,10 +1820,10 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     What can you do to recover the claims in their original wording?
     
     \begin{enumerate}[label=\Alph*.]
-        \item File the claims as missing parts, which allows to maintain the filing date because the claims were completely contained in the priority document.
-        \item File the claims in their original form within 2 months from an invitation under Rule 55 EPC.
-        \item File the claims in their original form within 2 months from an invitation under Rule 58 EPC.
-        \item None of A-C.
+        \item File the claims as missing parts, which allows to maintain the filing date because the claims were completely contained in the priority document. \F --- you can \textbf{never} file claims as missing parts.
+        \item File the claims in their original form within 2 months from an invitation under Rule 55 EPC. \F --- date of filing under \textbf{R. 40 EPC} is fine because you don't need claims for that.
+        \item File the claims in their original form within 2 months from an invitation under Rule 58 EPC. \T -- EPO will issue invitation under \textbf{R. 58 EPC} to ``correct deficiencies,'' i.e., add at least one claim. But you will likely get an \textbf{Art. 123(2) EPC} strike. \\\colorbox{Thistle}{maybe ask Zsofia about how to handle this type of leading question.}
+        \item None of A-C. \F
     \end{enumerate}
 
     \item % Question 7
@@ -1837,9 +1837,9 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     Today is 17 March 2023.
     
     \begin{enumerate}[label=(\alph*)]
-        \item Until when may another divisional DIV3 be filed out of EP1, directed to C?
-        \item Until when may another divisional DIV4 be filed out of DIV1, directed to C?
-        \item Until when may another divisional DIV5 be filed out of DIV2, directed to C?
+        \item Until when may another divisional DIV3 be filed out of EP1, directed to C? --- you can still do a DIV3 off of EP1 as long as EP1 is pending.
+        \item Until when may another divisional DIV4 be filed out of DIV1, directed to C? --- you have 2m of appeal window to file a divisional as even a refused app is considered pending until then. You may even get 4m if appeal filed and appeal fee paid.
+        \item Until when may another divisional DIV5 be filed out of DIV2, directed to C? --- until day before mention of grant of DIV2.
     \end{enumerate}
 
     \item % Question 8
@@ -1850,15 +1850,22 @@ corrected in time, the application will be refused.}`` --- \textsc{Euro-PCT Guid
     For each of the statements below, indicate whether the statement is true or false.
     
     \begin{enumerate}[label=(\alph*)]
-        \item The loss of rights communication indicates that the application is refused.
-        \item The loss of rights ensues at the end of 23 November 2018
-        \item The loss of rights ensues at the end of 3 December 2018.
-        \item The loss of rights ensues at the end of 13 December 2018.
-        \item The loss of rights ensues at the end of 23 December 2018.
-        \item The loss of rights ensues at the end of 24 February 2019.
-        \item As the loss of rights may still be remedied with further processing and the term for requesting further processing has not yet expired, the parent application was still pending when the divisional was filed. No further processing of any kind is needed.
-        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed term for filing the divisional.
-        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed terms for paying the examination and designation fee for the parent application.
+        \item The loss of rights communication indicates that the application is refused. \F --- the app. will be \textit{deemed to be withdrawn} after not responding to communication.
+        \item The loss of rights ensues at the end of 23 November 2018 \T
+        \item The loss of rights ensues at the end of 3 December 2018. \F
+        \item The loss of rights ensues at the end of 13 December 2018. \F
+        \item The loss of rights ensues at the end of 23 December 2018. \F
+        \item The loss of rights ensues at the end of 24 February 2019. \F
+        \item As the loss of rights may still be remedied with further processing and the term for requesting further processing has not yet expired, the parent application was still pending when the divisional was filed. No further processing of any kind is needed. \F --- parent was not pending upon being deemed to be withdrawn. The FP remedy should have been applied \textit{before} filing the divisional.
+        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed term for filing the divisional. \F --- parent was not pending upon being deemed to be withdrawn. The FP remedy should have been applied \textit{before} filing the divisional. You cannot do anything in terms of the divisional, because you cannot validly file it. 
+        \item As the parent was no longer pending when DIV1 was filed, DIV1 was filed too late. However, this failure may be remedied by requesting further processing in respect of the missed terms for paying the examination and designation fee for the parent application. \T --- The FP remedy may be applied to restore the parent and then you can file a new divisional based off that restored parent. 
+        \begin{center}
+         
+\p \p \p
+
+        \end{center} 
+        Key consideration here is that the \textbf{loss of rights ensues \underline{directly on expiry of applicable period}}. So even though the communication was sent later, the expiry was actually on 23 \textsc{Nov} 2018 (6 months from publication of EESR) and that's when loss of rights ensued. \\
+        Further, the only way of being able to file a divisional is to restore the pendency of the parent first by performing FP requirements. 
     \end{enumerate}
 
 \end{enumerate}
